--- a/Lab2/CMakeLists.txt
+++ b/Lab2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab2 VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Lab2 Main.cpp)
+add_executable(Lab2 Main.cpp Grid.cpp Grid.h Game.cpp Game.h)
