split GodFile.cpp

--- a/Lab4/CMakeLists.txt
+++ b/Lab4/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
 
-add_executable(Lab4 Main.cpp)
+add_executable(Lab4 Main.cpp CsvParser.h CsvIterator.h TupleTools.h)
